[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-wysiwyg/xwiki-platform-wysiwyg-client/src/main/resources/org/xwiki/gwt/wysiwyg/client/Strings_lv.properties
+++ b/xwiki-platform-core/xwiki-platform-wysiwyg/xwiki-platform-wysiwyg-client/src/main/resources/org/xwiki/gwt/wysiwyg/client/Strings_lv.properties
@@ -63,7 +63,7 @@ imageExternalLocationNotSpecifiedError=L\u016Bdzu nor\u0101diet att\u0113la atra
 imageHeightHelpLabel=Att\u0113la augstums ar izm\u0113ru un vien\u012Bbu (piem., \u2019100\u2019 noz\u012Bm\u0113 \u2019100px\u2019, vai \u2019100pt\u2019, u.tml.) vai k\u0101 procenti no lapas (piem., \u201980%\u2019). Atst\u0101jiet tuk\u0161u, ja v\u0113laties saglab\u0101t att\u0113la s\u0101kotn\u0113jo izm\u0113ru.
 imageHeightLabel=Augstums
 imageHorizontalAlignmentHelpLabel=Izv\u0113lieties, k\u0101 att\u0113ls tiks novietots tekst\u0101\: pa kreisi, pa labi, ar tekstu tam apk\u0101rt, vai ar\u012B centr\u0101 bez teksta tam apk\u0101rt.
-imageHorizontalAlignmentLabel=Horizont\u0101lais l\u012Bme\u0146ojums
+imageHorizontalAlignmentLabel=Horizont\u0101lais izl\u012Bdzin\u0101jums
 imageInsertAttachedImage=Pievienots att\u0113ls...
 imageInsertURLImage=\u0100r\u0113js att\u0113ls...
 imageNoImageSelectedError=Nav izv\u0113l\u0113ts neviens att\u0113ls
@@ -76,8 +76,8 @@ imageTooltip=Ievietot vai main\u012Bt att\u0113lu
 imageUpdateListButton=Atjaunot
 imageUploadHelpLabel=Nor\u0101diet ce\u013Cu uz ievietojam\u0101 att\u0113la failu
 imageUploadNewFileLabel=Aug\u0161upl\u0101d\u0113t jaunu att\u0113lu
-imageVerticalAlignmentHelpLabel=Izv\u0113lieties, k\u0101 att\u0113ls tiks l\u012Bme\u0146ots vertik\u0101li attiec\u012Bb\u0101 pret tekstu\: vien\u0101 l\u012Bnij\u0101 ar aug\u0161\u0113jo vai apak\u0161\u0113jo malu, vai ar\u012B ar centru.
-imageVerticalAlignmentLabel=Vertik\u0101lais l\u012Bme\u0146ojums
+imageVerticalAlignmentHelpLabel=Izv\u0113lieties, k\u0101 att\u0113ls tiks izl\u012Bdzin\u0101ts vertik\u0101li attiec\u012Bb\u0101 pret tekstu\: vien\u0101 l\u012Bnij\u0101 ar aug\u0161\u0113jo vai apak\u0161\u0113jo malu, vai ar\u012B ar centru.
+imageVerticalAlignmentLabel=Vertik\u0101lais izl\u012Bdzin\u0101jums
 imageWidthHelpLabel=Nor\u0101diet att\u0113la platumu ar izm\u0113ru un vien\u012Bbu (piem., \u2019100\u2019 noz\u012Bm\u0113 \u2019100px\u2019, vai \u2019100pt\u2019, u.tml.) vai k\u0101 procenti no lapas (piem., \u201980%\u2019). Atst\u0101jiet tuk\u0161u, ja v\u0113laties saglab\u0101t att\u0113la s\u0101kotn\u0113jo izm\u0113ru.
 imageWidthLabel=Platums
 importMenuEntryCaption=Import\u0113t
@@ -168,7 +168,7 @@ macroInsertDialogTitle=Makrosa izv\u0113le
 macroInsertShortcutKeyLabel=Ctrl+Shift+M
 macroNoMacroSelected=L\u016Bdzu izv\u0113lieties makrosu no sekojo\u0161\u0101 saraksta
 macroParameterMandatory=\u0160is parametrs ir oblig\u0101ts
-macroRefresh=Atjaunin\u0101t
+macroRefresh=Atjaunot
 macroRefreshShortcutKeyLabel=Ctrl+Shift+R
 mandatory=(Oblig\u0101ts)
 no=n\u0113
