--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -478,6 +478,7 @@ admin.userprofile.description=G\u00E9rer les informations \u00E0 afficher dans l
 admin.users=Utilisateurs
 admin.users.description=G\u00E9rez les utilisateurs de votre wiki \: ajoutez, supprimez ou modifiez leur profil.
 admin.usersgroups=Utilisateurs et Groupes
+admin.usersgroups.description=G\u00E9rer les utilisateurs, groupes et droits d'acc\u00E8s associ\u00E9s
 admin.versioning=Versionnage
 admin.wysiwyg=\u00C9diteur WYSIWYG
 admin.xwiki.addextensions=Ajouter des extensions
@@ -1527,6 +1528,8 @@ extensions.info.fetch.failed=Les donn\u00E9es de cette extension n'ont pas \u00E
 extensions.info.fetch.unauthorized=Demande non autoris\u00E9e. Soit votre session a expir\u00E9 ou vous avez perdu vos droits d\u2019acc\u00E8s lors de l'installation ou de la d\u00E9sinstallation d'une extension. Vous devrez vous identifier de nouveau afin de continuer. Comment souhaitez-vous proc\u00E9der?
 extensions.info.globalNamespace=espace de noms global
 extensions.info.id=Id
+extensions.info.installedBy=Install\u00E9 par {0} le {1} 
+extensions.info.installedOnNamespaceBy={0}, par {1} le {2} 
 extensions.info.issueManagement=Probl\u00E8mes
 extensions.info.jobLog=Journal d'ex\u00E9cution
 extensions.info.jobLog.install=Journal d'installation
@@ -1637,7 +1640,7 @@ import_listofskippedfiles=Liste des documents ignor\u00E9s
 importing=Importation en cours
 initialversion=Version Initiale
 inspace=dans
-invalidcredentials=Nom d'utilisateur et mot de passe invalides
+invalidcredentials=Nom d'utilisateur ou mot de passe invalide
 invalidusername=Nom d'utilisateur erron\u00E9. N'utiliser que des lettres de l'alphabet latin, des chiffres et le caract\u00E8re underscore (_).
 invitation_email_content=Contenu de l'e-mail d'invitation
 iregister=Enregistrement
