--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ro.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ro.properties
@@ -699,7 +699,9 @@ core.comment.deleteObject=Obiect \u0219ters
 core.comment.details=Descrie\u021Bi modific\u0103rile f\u0103cute
 core.comment.prompt=Descrie\u021Bi modific\u0103rile f\u0103cute
 core.comment.renameLink=Leg\u0103turile c\u0103tre {0} au fost actualizate \u00EEn urma redenumirii respectivului document.
+core.comment.renameParent=P\u0103rintele a fost schimbat la {0} \u00EEn urma redenumirii acelei pagini
 core.comment.rollback=Reveni\u021Bi la versiunea {0}
+core.comment.tooltip=Scurt\u0103 descriere a modific\u0103rilor tocmai f\u0103cute
 core.comment.updateClassProperty=Proprietate a clasei modificat\u0103
 core.comment.updateClassPropertyName=Numele unei propriet\u0103\u0163i a clasei modificat
 core.comment.updateContent=Modifica\u021Bi con\u021Binut
@@ -708,11 +710,56 @@ core.comment.updateProperty=Proprietate modificat\u0103
 core.comment.updatePropertyName=Numele unei propriet\u0103\u0163i modificat
 core.comment.uploadAttachmentComment=Ata\u0219a\u021Bi ata\u0219amentul {0}
 core.comment.uploadImageComment=\u00CEnc\u0103rca\u021Bi imaginea {0}
+core.copy.allTranslations=Toate traducerile
+core.copy.alreadyExists=Documentul {0} este deja existent. Sunte\u0163i siguri c\u0103 dori\u0163i sa \u00EEl suprascrie\u0163i (tot con\u0163inutul s\u0103u va fi pierdut)?
+core.copy.cancel=Anulare
+core.copy.changeTarget=Schimbare document destina\u0163ie
 core.copy.copydoc=Copia\u021Bi pagina
 core.copy.copyingdoc=Pagina {0} a fost copiat\u0103 cu succes la {1}  
+core.copy.language.hint=Traducere pagin\u0103 original\u0103
 core.copy.sourcedoc=Document surs\u0103
-core.copy.targetdoc=Document destina\u021Bie
-core.delete=\u0218terge\u021Bi
+core.copy.sourcedoc.hint=Loca\u0163ie pagin\u0103 original\u0103
+core.copy.sourcepage=Pagin\u0103 surs\u0103
+core.copy.sourcepage.hint=Loca\u0163ie pagin\u0103 original\u0103
+core.copy.sourcespace=Spa\u0163iu surs\u0103
+core.copy.sourcespace.hint=Loca\u0163ie spa\u0163iu original
+core.copy.sourcewiki=Wiki surs\u0103
+core.copy.sourcewiki.hint=Loca\u0163ie wiki original
+core.copy.submit=Copiere
+core.copy.targetdoc=Pagin\u0103 destina\u021Bie
+core.copy.targetdoc.hint=Loca\u0163ie dorit\u0103 a paginii copiate
+core.copy.targetpage=Document destina\u021Bie
+core.copy.targetpage.hint=Loca\u0163ie pagin\u0103 destina\u0163ie
+core.copy.targetspace=Spa\u0163iu destina\u0163ie
+core.copy.targetspace.hint=Loca\u0163ie spatiu destina\u0163ie
+core.copy.targetwiki=Wiki destina\u0163ie
+core.copy.targetwiki.hint=Loca\u0163ie wiki destina\u0163ie
+core.copy.title=Copiere <a href\="{1}">{0}</a> 
+core.create.ajax.error=A intervenit o eroare. Re\u00EEmprosp\u0103ta\u0163i pagina \u015Fi re\u00EEncerca\u0163i.
+core.create.newPageTitle=Creare pagin\u0103\: {0}
+core.create.page=Nume pagin\u0103
+core.create.page.error.docalreadyexists=Pagina <a href\="{1}">{0}</a> este deja existent\u0103. Pute\u0163i alege un alt nume de pagin\u0103 (sau pute\u0163i <a href\="{2}">edit {0}</a>). 
+core.create.page.hint=Nume pagin\u0103 nou\u0103
+core.create.page.space.hint=Spa\u0163iu pagin\u0103 nou\u0103
+core.create.page.template.empty=Pagin\u0103 wiki goal\u0103
+core.create.page.template.hint=\u015Eablon de folosit pentru pagina nou\u0103
+core.create.pageText=Pagin\u0103Nou\u0103
+core.create.pageTitle=Creare pagin\u0103
+core.create.space=Nume spa\u0163iu
+core.create.space.error.docalreadyexists=Spa\u0163iul {0} este deja existent. Alege\u0163i un alt nume de spa\u0163iu.
+core.create.space.hint=Nume spa\u0163iu nou
+core.create.space.template.empty=Pagin\u0103 principal\u0103 goal\u0103
+core.create.space.template.hint=\u015Eablon de folosit pentru pagina principal\u0103 a spa\u0163iului nou
+core.create.spaceTitle=Creare spa\u0163iu
+core.create.template=\u015Eablon
+core.create.template.allowedspace=Paginile create cu \u015Fablonul [{0}] trebuiesc create \u00EEn spa\u0163iul\: {1}
+core.create.template.allowedspace.inline=Spa\u0163iu permis pentru "{0}"\: {1}
+core.create.template.allowedspaces=Paginile create cu \u015Fablonul [{0}] trebuiesc create \u00EEn unul din urm\u0103toarele spa\u0163ii\: {1}
+core.create.template.allowedspaces.inline=Spa\u0163ii permise pentru "{0}"\: {1}
+core.create.template.empty=Pagin\u0103 wiki goal\u0103
+core.create.validation.mandatoryfield=C\u0103mp obligatoriu
+core.create.validation.valid=OK
+core.delete=Stergere
 core.delete.backlinksWarning=Urm\u0103toarele documente con\u0163in leg\u0103turi c\u0103tre acest document\:{0} Dup\u0103 \u015Ftergere, respectivele leg\u0103turi vor viza un document inexistent.
 core.delete.confirm=\u015Etergerea unui document nu este reversibil\u0103. Sunte\u0163i sigur c\u0103 dori\u0163i s\u0103 continua\u0163i?
 core.delete.confirmWithInlinks=\u00CEn plus, \u015Ftergerea unui document nu este reversibil\u0103. Sunte\u0163i sigur c\u0103 dori\u0163i s\u0103 continua\u0163i?
