[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -517,7 +517,7 @@ annotations.action.create.form.loaderror=\u00C9chec \:
 annotations.action.create.helpmessage=Pour annoter une zone de texte, s\u00E9lectionnez-la et cliquez sur {0}.
 annotations.action.create.loaderror=\u00C9chec \:
 annotations.action.create.selection.invalid=Merci de s\u00E9lectionner une zone texte qui ne soit pas vide dans le contenu du document.
-annotations.action.create.submit.text=Ajouter une annotation
+annotations.action.create.submit.text=Ajouter l'annotation
 annotations.action.create.success=L'annotation a \u00E9t\u00E9 ajout\u00E9e avec succ\u00E8s
 annotations.action.delete.confirm=\u00CAtes-vous s\u00FBr de vouloir supprimer cette annotation ?
 annotations.action.delete.done=Annotation supprim\u00E9e
@@ -727,13 +727,13 @@ core.copy.sourcewiki=Wiki Source
 core.copy.sourcewiki.hint=Emplacement du wiki d'origine
 core.copy.submit=Copier
 core.copy.targetdoc=Page de destination
-core.copy.targetdoc.hint=Nom de la page copi\u00E9e
+core.copy.targetdoc.hint=Nom de la nouvelle page
 core.copy.targetpage=Page Cible
-core.copy.targetpage.hint=Nom de la page copi\u00E9e
+core.copy.targetpage.hint=Nom de la nouvelle page
 core.copy.targetspace=Espace Cible
-core.copy.targetspace.hint=Espace de la page copi\u00E9e
+core.copy.targetspace.hint=Espace de la nouvelle page
 core.copy.targetwiki=Wiki Cible
-core.copy.targetwiki.hint=Wiki de la page copi\u00E9e
+core.copy.targetwiki.hint=Wiki de la nouvelle page
 core.copy.title=Copier <a href\="{1}">{0}</a> 
 core.create.ajax.error=Une erreur est survenue, merci de rafraichir la page et d'essayer \u00E0 nouveau
 core.create.newPageTitle=Cr\u00E9er la page {0}
@@ -949,12 +949,12 @@ core.menu.goto.wiki=Acc\u00E9der au Wiki
 core.menu.main.title=Actions g\u00E9n\u00E9rales \:
 core.menu.moreactions=Plus d'actions
 core.menu.network=R\u00E9seau
-core.menu.preview=Pr\u00E9visualisation
+core.menu.preview=Aper\u00E7u avant impression
 core.menu.print=Imprimer
 core.menu.print.preview=Pr\u00E9visualiser l'impression
 core.menu.profile=Profil
 core.menu.rename=Renommer
-core.menu.share=Partager par email
+core.menu.share=Envoyer par mail
 core.menu.space.delete=Supprimer
 core.menu.space.documentindex=Liste des documents de l'espace
 core.menu.type.home=Accueil
@@ -969,7 +969,7 @@ core.menu.view.attachments=Fichiers joints
 core.menu.view.comments=Commentaires
 core.menu.view.history=Historique
 core.menu.view.information=Informations
-core.menu.view.source=Voir le code source
+core.menu.view.source=Afficher le code source
 core.menu.watch=Favoris
 core.menu.watchlist.add=Ajouter aux favoris
 core.menu.watchlist.add.document=Ajouter ce document aux favoris
@@ -1287,7 +1287,7 @@ core.viewers.jump.shortcuts='Meta+G', 'Ctrl+G', 'Ctrl+/', 'Meta+/'
 core.viewers.jump.suggest.noResults=Aucun document trouv\u00E9
 core.viewers.share.cancel=Annuler
 core.viewers.share.defaultMessage=Je souhaitais partager ce document avec vous.
-core.viewers.share.dialogTitle=Partager cette page
+core.viewers.share.dialogTitle=Envoyer cette page
 core.viewers.share.error.missingRecipient=Entrez le destinataire
 core.viewers.share.error.mustLogin=Vous devez \u00EAtre connect\u00E9 pour utiliser cette fonctionnalit\u00E9
 core.viewers.share.error.serverError=Erreur du serveur email
@@ -1306,7 +1306,7 @@ core.viewers.share.submit=Envoyer
 core.viewers.share.target=Envoyer \u00E0
 core.viewers.share.target.ccMe=M'envoyer une copie
 core.viewers.share.target.hint=Utilisateur XWiki ou adresse email
-core.viewers.share.title=Partager <a href\="{1}">{0}</a> par email
+core.viewers.share.title=Envoyer <a href\="{1}">{0}</a> par mail
 core.widgets.ajaxRequest.error.noServer=Le serveur ne r\u00E9pond pas
 core.widgets.confirmationBox.button.cancel=Annuler
 core.widgets.confirmationBox.button.no=Non
@@ -1828,7 +1828,7 @@ platform.appwithinminutes.classEditorPaletteHint=Glissez-D\u00E9posez des champs
 platform.appwithinminutes.classEditorPaletteTitle=Palette de champs
 platform.appwithinminutes.classEditorPickersCategoryName=S\u00E9lecteurs
 platform.appwithinminutes.classEditorPreviewFieldHint=Masquer le panneau de configuration et appliquer les changements
-platform.appwithinminutes.classEditorPreviewFieldLabel=Pr\u00E9visualisation
+platform.appwithinminutes.classEditorPreviewFieldLabel=Pr\u00E9visualiser
 platform.appwithinminutes.classEditorSheetSaveComment=Mise \u00E0 jour de la sheet de la classe
 platform.appwithinminutes.classEditorStandardCategoryName=Standard
 platform.appwithinminutes.classEditorStaticListEditorAddItemLabel=Ajouter
@@ -2739,7 +2739,7 @@ search.page.results.score=Score
 search.page.results.space=Espace
 search.page.results.wiki=Wiki
 search.page.title.noquery=Recherche
-search.page.title.query=Recherche\: {0}
+search.page.title.query=R\u00E9sultats de recherche pour \: {0}
 search.rss=Flux RSS pour la recherche sur le terme {0}
 secondleveltitle=Titre de second niveau
 sectionEdit=\u00C9dition par section
