--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_lv.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_lv.properties
@@ -1477,6 +1477,8 @@ export_version=Versija
 extensions.actions.back=Atpaka\u013C uz sarakstu
 extensions.actions.continue=Turpin\u0101t
 extensions.actions.diff=R\u0101d\u012Bt izmai\u0146as
+extensions.actions.diffXAR=Noteikt izmai\u0146as
+extensions.actions.diffXAR.hint=Noteikt papla\u0161in\u0101jumu lap\u0101s veikt\u0101s izmai\u0146as
 extensions.actions.downgrade=Novecin\u0101t
 extensions.actions.downgradeGlobally=Novecin\u0101t fermu
 extensions.actions.hideDetails=Sl\u0113pt deta\u013Cas
@@ -1515,6 +1517,7 @@ extensions.distribution.upToDate=Visi papla\u0161in\u0101jumi ir aktu\u0101li
 extensions.distribution.wizardTitle=Distrib\u016Bcijas vednis
 extensions.info.authors=autori\:
 extensions.info.authors.xwikiorg=XWiki izstr\u0101des komanda
+extensions.info.category.changes=Izmai\u0146as
 extensions.info.category.dependencies=Atkar\u012Bbas
 extensions.info.category.description=Apraksts
 extensions.info.category.progress=Progress
@@ -1556,6 +1559,7 @@ extensions.install.actions.cancel=Atcelt
 extensions.install.actions.submit=Pielietot
 extensions.install.error.alreadyInstalled=Jau ir uzst\u0101d\u012Bts
 extensions.install.error.conflictingExtension=versijai {1} ir nepiecie\u0161ams papla\u0161in\u0101jums {0}, bet kodola papla\u0161in\u0101jumam ir {2} versija
+extensions.install.error.diffXarFailure=Neizdev\u0101s noteikt papla\u0161in\u0101jumu lap\u0101s veikt\u0101s izmai\u0146as
 extensions.install.error.installFailure=Neizdev\u0101s uzst\u0101d\u012Bt papla\u0161in\u0101jumu ar id {0} un versiju {1}\:
 extensions.install.error.installFailure.onWiki=Neizdev\u0101s uzst\u0101d\u012Bt papla\u0161in\u0101jumu ar id {0} un versiju {1} viki {2}\:
 extensions.install.error.prepareFailure=Neizdev\u0101s noteikt papla\u0161in\u0101jumu ar id {0} un versiju {1}\:{2}
