[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_lv.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_lv.properties
@@ -1477,6 +1477,8 @@ export_version=Versija
 extensions.actions.back=Atpaka\u013C uz sarakstu
 extensions.actions.continue=Turpin\u0101t
 extensions.actions.diff=R\u0101d\u012Bt izmai\u0146as
+extensions.actions.diffXAR=Noteikt izmai\u0146as
+extensions.actions.diffXAR.hint=Noteikt papla\u0161in\u0101jumu lap\u0101s veikt\u0101s izmai\u0146as
 extensions.actions.downgrade=Novecin\u0101t
 extensions.actions.downgradeGlobally=Novecin\u0101t fermu
 extensions.actions.hideDetails=Sl\u0113pt deta\u013Cas
@@ -1515,6 +1517,7 @@ extensions.distribution.upToDate=Visi papla\u0161in\u0101jumi ir aktu\u0101li
 extensions.distribution.wizardTitle=Distrib\u016Bcijas vednis
 extensions.info.authors=autori\:
 extensions.info.authors.xwikiorg=XWiki izstr\u0101des komanda
+extensions.info.category.changes=Izmai\u0146as
 extensions.info.category.dependencies=Atkar\u012Bbas
 extensions.info.category.description=Apraksts
 extensions.info.category.progress=Progress
@@ -1528,6 +1531,9 @@ extensions.info.fetch.failed=Neizdev\u0101s ieg\u016Bt papla\u0161in\u0101juma d
 extensions.info.fetch.unauthorized=Neautoriz\u0113ts piepras\u012Bjums. Vai nu ir beigusies sesija, vai ar\u012B j\u016Bs esat pazaud\u0113jis ties\u012Bbas papla\u0161in\u0101juma uzst\u0101d\u012B\u0161anas vai no\u0146em\u0161anas laik\u0101. Lai turpin\u0101tu, jums ir j\u0101piesak\u0101s no jauna. Turpin\u0101t?
 extensions.info.globalNamespace=glob\u0101la v\u0101rdtelpa
 extensions.info.id=Id
+extensions.info.installedBy={1} uzst\u0101d\u012Bjis {0}
+extensions.info.installedGloballyBy={1} uzst\u0101d\u012Bjis glob\u0101li {0}
+extensions.info.installedOnNamespaceBy={2} uz {0} uzst\u0101d\u012Bjis {1}
 extensions.info.issueManagement=Darbi
 extensions.info.license={0,choice,0\#Nezin\u0101ma licence|0<Licence\:}
 extensions.info.namespaces.global=Uzst\u0101d\u012Bts visur
@@ -1553,6 +1559,7 @@ extensions.install.actions.cancel=Atcelt
 extensions.install.actions.submit=Pielietot
 extensions.install.error.alreadyInstalled=Jau ir uzst\u0101d\u012Bts
 extensions.install.error.conflictingExtension=versijai {1} ir nepiecie\u0161ams papla\u0161in\u0101jums {0}, bet kodola papla\u0161in\u0101jumam ir {2} versija
+extensions.install.error.diffXarFailure=Neizdev\u0101s noteikt papla\u0161in\u0101jumu lap\u0101s veikt\u0101s izmai\u0146as
 extensions.install.error.installFailure=Neizdev\u0101s uzst\u0101d\u012Bt papla\u0161in\u0101jumu ar id {0} un versiju {1}\:
 extensions.install.error.installFailure.onWiki=Neizdev\u0101s uzst\u0101d\u012Bt papla\u0161in\u0101jumu ar id {0} un versiju {1} viki {2}\:
 extensions.install.error.prepareFailure=Neizdev\u0101s noteikt papla\u0161in\u0101jumu ar id {0} un versiju {1}\:{2}
@@ -2876,6 +2883,21 @@ watchlist.table.space=Vieta
 watchlist.table.type=Veids
 watchlist.table.wiki=Viki
 watchlist.title={0} v\u0113rojumu saraksts
+web.history.changes.attachment.author=Autors
+web.history.changes.attachment.content=Saturs
+web.history.changes.attachment.noContentChanges=\u0160is nav teksta fails vai ar\u012B t\u0101 saturs ir p\u0101r\u0101k liels
+web.history.changes.attachment.size=Izm\u0113rs
+web.history.changes.details=Deta\u013Cas
+web.history.changes.document.content=Saturs
+web.history.changes.lineEndings=Ir izmain\u012Bti tikai rindu p\u0101rnesumi
+web.history.changes.noChanges=Nav izmai\u0146u
+web.history.changes.privateInformation=Priv\u0101ta inform\u0101cija
+web.history.changes.summary=Apkopojums
+web.history.changes.summary.attachments=Pielikumi
+web.history.changes.summary.classProperties=Klases \u012Bpa\u0161\u012Bbas
+web.history.changes.summary.documentProperties=Lapas \u012Bpa\u0161\u012Bbas
+web.history.changes.summary.modifiedAddedRemoved={0} main\u012Bti, {1} pievienoti, {2} dz\u0113sti
+web.history.changes.summary.objects=Objekti
 web.paging.firstPage=&laquo; Pirm\u0101 
 web.paging.lastPage=P\u0113d\u0113j\u0101 &raquo; 
 web.paging.nextPage=N\u0101kam\u0101 &gt; 
