--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_de.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_de.properties
@@ -2925,11 +2925,11 @@ xe.admin.forgotUsername.error.noAccount=Auf diese E-Mail Adresse wurde kein Benu
 xe.admin.forgotUsername.error.retry=\u00AB Versuchen Sie eine andere E-Mail Adresse zu verwenden
 xe.admin.forgotUsername.instructions=Bitte geben Sie die E-Mail Adresse an, die Sie beim Erstellen des Benutzerkontos angegeben haben.
 xe.admin.forgotUsername.login=Anmelden \u00BB
-xe.admin.forgotUsername.loginMessage=Kennwort vergessen?
+xe.admin.forgotUsername.loginMessage=Benutzername vergessen?
 xe.admin.forgotUsername.multipleResults=Die folgenden Benutzernamen sind f\u00FCr diese E-Mail Adresse registriert\:
 xe.admin.forgotUsername.result=Ihr Benutzername ist\: {0}
 xe.admin.forgotUsername.submit=Benutzernamen wiedererlangen
-xe.admin.forgotUsername.title=Kennwort vergessen?
+xe.admin.forgotUsername.title=Benutzername vergessen?
 xe.admin.global=Global
 xe.admin.groups._actions=Verwalten
 xe.admin.groups._actions.delete=entfernen
