[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ca.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ca.properties
@@ -1738,6 +1738,9 @@ watchlist.table.space=Espai
 watchlist.table.type=Tipus
 watchlist.table.wiki=Wiki
 watchlist.title=Llista d''observaci\u00F3 per {0}
+web.history.changes.document.defaultLocale=Idioma predeterminat
+web.history.changes.document.parent=Pare
+web.history.changes.document.title=T\u00EDtol
 web.paging.firstPage=&laquo; Primer
 web.paging.lastPage=\u00DAltim &raquo;
 web.paging.nextPage=Seg\u00FCent &gt;
