--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_cs.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_cs.properties
@@ -338,7 +338,7 @@ admin.editor=Editor
 admin.elements=Prvky str\u00E1nky
 admin.elements.description=Vyberte, co se m\u00E1 zobrazit v titulku okna a z\u00E1pat\u00ED str\u00E1nky a na kter\u00E9 stran\u011B zobrazit panely a z\u00E1lo\u017Eky metadat dokumentu.
 admin.email=Email
-admin.email.description=Konfigurace procesu odes\u00EDl\u00E1n\u00ED email\u016F.\n
+admin.email.description=Konfigurace procesu odes\u00EDl\u00E1n\u00ED email\u016F.
 admin.export=Export
 admin.export.description=Export str\u00E1nek do XAR.
 admin.extensionmanager=Spr\u00E1vce roz\u0161\u00ED\u0159en\u00ED
@@ -2308,6 +2308,9 @@ watchlist.table.space=Prostor
 watchlist.table.type=Typ
 watchlist.table.wiki=Wiki
 watchlist.title=Seznam sledov\u00E1n\u00ED pro {0}
+web.history.changes.document.defaultLocale=V\u00FDchoz\u00ED jazyk
+web.history.changes.document.parent=Nad\u0159azen\u00FD dokument
+web.history.changes.document.title=Nadpis
 web.paging.firstPage=&laquo; Prvn\u00ED
 web.paging.lastPage=Posledn\u00ED &raquo;
 web.paging.nextPage=Dal\u0161\u00ED &gt;
