--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_da.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_da.properties
@@ -2706,6 +2706,10 @@ watchlist.table.space=Omr\u00E5de
 watchlist.table.type=Type
 watchlist.table.wiki=Wiki
 watchlist.title=Overv\u00E5gningsliste for {0}
+web.history.changes.document.defaultLocale=Standardsprog
+web.history.changes.document.hidden=Skjult
+web.history.changes.document.parent=H\u00F8rer under
+web.history.changes.document.title=Titel
 web.paging.firstPage=&laquo; F\u00F8rste
 web.paging.lastPage=Sidste &raquo;
 web.paging.nextPage=N\u00E6ste &gt;
