--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_es.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_es.properties
@@ -2246,6 +2246,10 @@ watchlist.table.space=Espacio
 watchlist.table.type=Tipo
 watchlist.table.wiki=Wiki
 watchlist.title=Alertas para {0}
+web.history.changes.document.defaultLocale=Idioma predefinido
+web.history.changes.document.hidden=Oculto
+web.history.changes.document.parent=Padre
+web.history.changes.document.title=T\u00EDtulo
 web.paging.firstPage=&laquo; Primero
 web.paging.lastPage=\u00DAltimo &raquo;
 web.paging.nextPage=Siguiente &gt;
