--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_gl.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_gl.properties
@@ -1371,6 +1371,9 @@ watchlist.staytuned.info=Recibir informaci\u00F3n da s\u00FAa lista de elementos
 watchlist.staytuned.rss=Canle RSS
 watchlist.staytuned.rss.info=\u00DAltima modificaci\u00F3n da s\u00FAa listaxe de elementos observados
 watchlist.title=Listaxe de elementos observados de {0}
+web.history.changes.document.defaultLocale=Idioma predefinido
+web.history.changes.document.parent=Matriz
+web.history.changes.document.title=T\u00EDtulo
 web.paging.firstPage=&laquo; Primeiro
 web.paging.lastPage=Derradeiro &raquo;
 web.paging.nextPage=Seguinte &gt;
