--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_it.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_it.properties
@@ -2383,6 +2383,9 @@ watchlist.table.space=Spazio
 watchlist.table.type=Tipo
 watchlist.table.wiki=Wiki
 watchlist.title=Elenco di sorveglianza di {0}
+web.history.changes.document.defaultLocale=Lingua predefinita
+web.history.changes.document.parent=Padre
+web.history.changes.document.title=Titolo
 web.paging.firstPage=&laquo; Prima 
 web.paging.lastPage=Ultima &raquo;
 web.paging.nextPage=Successiva &gt;
