--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_lv.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_lv.properties
@@ -2889,6 +2889,11 @@ web.history.changes.attachment.noContentChanges=\u0160is nav teksta fails vai ar
 web.history.changes.attachment.size=Izm\u0113rs
 web.history.changes.details=Deta\u013Cas
 web.history.changes.document.content=Saturs
+web.history.changes.document.defaultLocale=Noklus\u0113t\u0101 valoda
+web.history.changes.document.hidden=Sl\u0113pts
+web.history.changes.document.parent=Vec\u0101ks
+web.history.changes.document.syntax=Sintakse
+web.history.changes.document.title=Virsraksts
 web.history.changes.lineEndings=Ir izmain\u012Bti tikai rindu p\u0101rnesumi
 web.history.changes.noChanges=Nav izmai\u0146u
 web.history.changes.privateInformation=Priv\u0101ta inform\u0101cija
