--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_nl.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_nl.properties
@@ -1282,6 +1282,8 @@ watchlist.table.allspaces=Alle ruimtes
 watchlist.table.document=Document naam
 watchlist.table.space=Ruimte
 watchlist.title=Volglijst voor {0}
+web.history.changes.document.defaultLocale=Standaard taal
+web.history.changes.document.hidden=Verborgen
 webcopyright=Auteursrechten
 webmenu=Paginaruimte Menu
 webpageviews=Space paginaweergaves
