--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_pt_BR.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_pt_BR.properties
@@ -2780,6 +2780,10 @@ watchlist.table.space=Espa\u00E7o
 watchlist.table.type=Tipo
 watchlist.table.wiki=Wiki
 watchlist.title=Seguir para {0}
+web.history.changes.document.defaultLocale=L\u00EDngua padr\u00E3o
+web.history.changes.document.hidden=Escondido
+web.history.changes.document.parent=Pai
+web.history.changes.document.title=T\u00EDtulo
 web.paging.firstPage=&laquo; Primeiro
 web.paging.lastPage=\u00DAltimo &raquo;
 web.paging.nextPage=Pr\u00F3ximo &gt;
