--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ro.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ro.properties
@@ -1639,6 +1639,9 @@ watchlist.staytuned.info=Primeste notificari de la lista monitorizat\u0103
 watchlist.staytuned.rss=Flux RSS
 watchlist.staytuned.rss.info=Flux pentru ultimile modific\u0103ri ale listei de monitorizare
 watchlist.title=Lista de monitorizare pentru {0}
+web.history.changes.document.defaultLocale=Limb\u0103 implicit\u0103
+web.history.changes.document.parent=P\u0103rinte
+web.history.changes.document.title=Titlu
 web.paging.firstPage=&laquo; Prima
 web.paging.lastPage=Ultima &raquo;
 web.paging.nextPage=Urm\u0103toarea &gt;
