--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ru.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_ru.properties
@@ -2681,6 +2681,10 @@ watchlist.table.space=\u0420\u0430\u0437\u0434\u0435\u043B
 watchlist.table.type=\u0422\u0438\u043F
 watchlist.table.wiki=Wiki
 watchlist.title=\u0421\u043F\u0438\u0441\u043E\u043A \u0441\u043B\u0435\u0436\u0435\u043D\u0438\u044F  {0} 
+web.history.changes.document.defaultLocale=\u042F\u0437\u044B\u043A \u043F\u043E \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E
+web.history.changes.document.hidden=\u0421\u043A\u0440\u044B\u0442\u044B\u0435
+web.history.changes.document.parent=\u0420\u043E\u0434\u0438\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
+web.history.changes.document.title=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
 web.paging.firstPage=&laquo; \u041D\u0430\u0447\u0430\u043B\u043E
 web.paging.lastPage=\u041A\u043E\u043D\u0435\u0446 &raquo;
 web.paging.nextPage=\u0421\u043B\u0435\u0434\u0443\u044E\u0449\u0430\u044F &gt;
