--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_sk.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_sk.properties
@@ -1381,6 +1381,9 @@ watchlist.staytuned.info=Prija\u0165 notifik\u00E1ciu zo zoznamu sledovania
 watchlist.staytuned.rss=RSS feed
 watchlist.staytuned.rss.info=Feed posledn\u00FDch modifik\u00E1ci\u00ED pre v\u00E1\u0161 zoznam sledovania
 watchlist.title=Zoznam sledovania pre {0}
+web.history.changes.document.defaultLocale=Preddefinovan\u00FD jazyk
+web.history.changes.document.parent=Nadraden\u00FD
+web.history.changes.document.title=N\u00E1zov
 web.paging.firstPage=&laquo; Prv\u00E1
 web.paging.lastPage=Posledn\u00E1 &raquo;
 web.paging.nextPage=\u010Eal\u0161ia &gt;
