--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_sv.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_sv.properties
@@ -2752,6 +2752,10 @@ watchlist.table.space=Rum
 watchlist.table.type=Typ
 watchlist.table.wiki=Wiki
 watchlist.title=Bevakningslista f\u00F6r {0}
+web.history.changes.document.defaultLocale=Spr\u00E5k, om inget annat anges
+web.history.changes.document.hidden=Dold
+web.history.changes.document.parent=F\u00F6r\u00E4lder
+web.history.changes.document.title=Titel
 web.paging.firstPage=&laquo; F\u00F6rsta
 web.paging.lastPage=Sista &raquo;
 web.paging.nextPage=N\u00E4sta &gt;
