--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_tr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_tr.properties
@@ -2350,6 +2350,9 @@ watchlist.table.document=Belge ad\u0131
 watchlist.table.space=Uzay
 watchlist.table.type=T\u00FCr
 watchlist.table.wiki=Wiki
+web.history.changes.document.defaultLocale=Varsay\u0131lan dil
+web.history.changes.document.parent=\u00DCst Sayfa
+web.history.changes.document.title=Ba\u015Fl\u0131k
 web.paging.firstPage=\u00AB\u0130lk
 web.paging.lastPage=Son \u00BB
 web.paging.nextPage=Sonraki >
