--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_vi.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_vi.properties
@@ -1543,6 +1543,9 @@ watchlist.table.space=Kh\u00F4ng gian
 watchlist.table.type=Lo\u1EA1i
 watchlist.table.wiki=Wiki
 watchlist.title=Watchlist for {0}
+web.history.changes.document.defaultLocale=Ng\u00F4n ng\u1EEF m\u1EB7c \u0111\u1ECBnh
+web.history.changes.document.parent=Cha m\u1EB9
+web.history.changes.document.title=T\u1EF1a \u0111\u1EC1
 web.paging.firstPage=&laquo; \u0110\u1EA7u ti\u00EAn
 web.paging.lastPage=Sau c\u00F9ng &raquo;
 web.paging.nextPage=V\u1EC1 sau &gt;
