--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_zh.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_zh.properties
@@ -1585,6 +1585,9 @@ watchlist.staytuned.email.frequency.save=\u4FDD\u5B58
 watchlist.staytuned.email.info=\u8BF7\u9009\u62E9\u60A8\u559C\u6B22\u591A\u4E45\u63A5\u6536Email\u901A\u77E5
 watchlist.staytuned.info=\u4ECE\u5217\u8868\u4E2D\u9009\u62E9\u63A5\u53D7\u7684\u901A\u77E5
 watchlist.staytuned.rss=RSS\u6E90
+web.history.changes.document.defaultLocale=\u9ED8\u8BA4\u8BED\u8A00
+web.history.changes.document.parent=\u7236
+web.history.changes.document.title=\u6807\u9898
 web.paging.firstPage=&laquo; \u9996\u9875
 web.paging.lastPage=\u672B\u9875 &raquo; 
 web.paging.nextPage=\u4E0B\u4E00\u9875 &gt; 
