--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_zh_TW.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_zh_TW.properties
@@ -1862,6 +1862,9 @@ watchlist.table.space=\u7A7A\u9593
 watchlist.table.type=\u7A2E\u985E
 watchlist.table.wiki=Wiki
 watchlist.title={0} \u7684\u8FFD\u8E64\u5217\u8868
+web.history.changes.document.defaultLocale=\u9810\u8A2D\u8A9E\u8A00
+web.history.changes.document.parent=\u7236
+web.history.changes.document.title=\u6A19\u984C
 web.paging.firstPage=&laquo; \u7B2C\u4E00\u9801
 web.paging.lastPage=\u6700\u5F8C\u4E00\u9801 &raquo;
 web.paging.nextPage=\u4E0B\u4E00\u9801 &gt;
