--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -177,7 +177,7 @@ XWiki.XWikiPreferences_authenticate_view=Exiger l'authentification en consultati
 XWiki.XWikiPreferences_backlinks=Liens vers cette page
 XWiki.XWikiPreferences_colorTheme=Th\u00E8me de couleurs
 XWiki.XWikiPreferences_comment_anonymous=Anonyme
-XWiki.XWikiPreferences_comment_registered=Enregistr\u00E9
+XWiki.XWikiPreferences_comment_registered=Inscrit
 XWiki.XWikiPreferences_confirmation_email_content=Contenu du mail de confirmation
 XWiki.XWikiPreferences_convertmail=convertir le type d'email
 XWiki.XWikiPreferences_core.defaultDocumentSyntax=Syntaxe par d\u00E9faut pour les pages wiki
@@ -185,7 +185,7 @@ XWiki.XWikiPreferences_dateformat=Format de date
 XWiki.XWikiPreferences_default_language=Langue par d\u00E9faut
 XWiki.XWikiPreferences_documentBundles=Pages de traduction
 XWiki.XWikiPreferences_edit_anonymous=Anonyme
-XWiki.XWikiPreferences_edit_registered=Enregistr\u00E9
+XWiki.XWikiPreferences_edit_registered=Inscrit
 XWiki.XWikiPreferences_editbox_height=Hauteur de l'\u00E9diteur de texte
 XWiki.XWikiPreferences_editbox_width=Largeur de l'\u00E9diteur de texte
 XWiki.XWikiPreferences_editcomment=Activer les r\u00E9sum\u00E9s de version
@@ -244,7 +244,7 @@ XWiki.XWikiPreferences_pageWidth=Largeur de page pr\u00E9f\u00E9r\u00E9e
 XWiki.XWikiPreferences_parent=Espace parent
 XWiki.XWikiPreferences_plugins=Modules d'extension
 XWiki.XWikiPreferences_registration_anonymous=Anonyme
-XWiki.XWikiPreferences_registration_registered=Enregistr\u00E9
+XWiki.XWikiPreferences_registration_registered=Inscrit
 XWiki.XWikiPreferences_renderXWikiGroovyRenderer=Rendu du code Groovy
 XWiki.XWikiPreferences_renderXWikiRadeoxRenderer=Rendu de la syntaxe wiki
 XWiki.XWikiPreferences_renderXWikiVelocityRenderer=Rendu du code Velocity
@@ -572,7 +572,7 @@ attachments=Pi\u00E8ces jointes
 attachthisfile=Ajouter ce fichier
 attributes=Attributs
 auth_active_check=V\u00E9rifier le champ 'Actif' lors de l'authentification
-authenticate_edit=Toujours authentifier en \u00E9dition
+authenticate_edit=Interdire aux utilisateurs non inscrits de modifier les pages, quelques soient le droits sur la page ou l'espace.
 authenticate_view=Toujours authentifier en visualisation
 author=Auteur
 availabledocumentstoimport=Documents disponibles pour l'import
@@ -1012,7 +1012,7 @@ core.register.password=Mot de passe \:
 core.register.passwordMismatch=Les mots de passe ne correspondent pas ou sont vides.
 core.register.passwordRepeat=Confirmez votre mot de passe
 core.register.registerFailed=L''inscription a \u00E9chou\u00E9 pour une raison inconnue (Code d''erreur \: {0})
-core.register.submit=Inscription
+core.register.submit=S'inscrire
 core.register.successful={0} ({1}) \: l''inscription a r\u00E9ussi
 core.register.title=Inscription
 core.register.userAlreadyExists=Cet utilisateur existe d\u00E9j\u00E0
@@ -1643,7 +1643,7 @@ inspace=dans
 invalidcredentials=Nom d'utilisateur ou mot de passe invalide
 invalidusername=Nom d'utilisateur erron\u00E9. N'utiliser que des lettres de l'alphabet latin, des chiffres et le caract\u00E8re underscore (_).
 invitation_email_content=Contenu de l'e-mail d'invitation
-iregister=Enregistrement
+iregister=S'inscrire
 italian=Italien
 italics=Italique
 italicstext=Texte en Italique
@@ -2647,7 +2647,7 @@ rightsmanager.local=Local
 rightsmanager.manage=Actions
 rightsmanager.members=Membres
 rightsmanager.programming=Programmer
-rightsmanager.register=Enregistrer
+rightsmanager.register=S'inscrire
 rightsmanager.searchfilter=Filtre de recherche \:
 rightsmanager.searchscope=\u00C9tendue de la recherche\:
 rightsmanager.specialusers=Utilisateurs particuliers
@@ -2883,6 +2883,11 @@ watchlist.table.space=Espace
 watchlist.table.type=Type
 watchlist.table.wiki=Wiki
 watchlist.title=Favoris de {0}
+web.history.changes.document.defaultLocale=Langue par defaut
+web.history.changes.document.hidden=Masqu\u00E9
+web.history.changes.document.parent=Parent
+web.history.changes.document.syntax=Syntaxe
+web.history.changes.document.title=Titre
 web.paging.firstPage=&laquo; Premi\u00E8re
 web.paging.lastPage=Derni\u00E8re &raquo;
 web.paging.nextPage=Suivante &gt;
@@ -3407,7 +3412,7 @@ xe.invitation.doUserActionOnMultipleMessages.cancel.areYouSure.OneMessage=\u00CA
 xe.invitation.doUserActionOnMultipleMessages.cancel.areYouSure.OneMessagePerGroup=\u00CAtes-vous sur de vouloir annuler ces {0} invitations ?
 xe.invitation.doUserActionOnMultipleMessages.cancel.areYouSure.multipleMessagesMultipleGroups=\u00CAtes-vous sur de vouloir annuler ces {0} invitations envoy\u00E9es \u00E0 ces {1} destinataires ?
 xe.invitation.doUserActionOnMultipleMessages.cancel.heading=Annuler les invitations
-xe.invitation.doUserActionOnMultipleMessages.cancel.memoLabel=Laissez un message au cas ou les personnes invit\u00E9e(s) essayent de s'enregistrer.
+xe.invitation.doUserActionOnMultipleMessages.cancel.memoLabel=Laissez un message au cas ou les personne(s) invit\u00E9e(s) essaye(nt) de s'inscrire.
 xe.invitation.doUserActionOnMultipleMessages.cancel.saveComment={0} invitations on \u00E9t\u00E9 annul\u00E9es par {1}
 xe.invitation.doUserActionOnMultipleMessages.cancel.someMessagesNotFound={0} des {1} invitations \u00E0 annuler n''ont pas \u00E9t\u00E9 trouv\u00E9es.
 xe.invitation.doUserActionOnMultipleMessages.cancel.success=Invitation annul\u00E9e avec succ\u00E8s.
