--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_uk.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_uk.properties
@@ -1801,6 +1801,9 @@ watchlist.table.space=\u041F\u0440\u043E\u0441\u0442\u0456\u0440
 watchlist.table.type=\u0422\u0438\u043F
 watchlist.table.wiki=Wiki
 watchlist.title=\u0421\u043F\u0438\u0441\u043E\u043A \u0441\u043F\u043E\u0441\u0442\u0435\u0440\u0435\u0436\u0435\u043D\u043D\u044F \u0434\u043B\u044F {0}
+web.history.changes.document.defaultLocale=\u041C\u043E\u0432\u0430 \u0437\u0430 \u0437\u0430\u043C\u043E\u0432\u0447\u0443\u0432\u0430\u043D\u043D\u044F\u043C
+web.history.changes.document.parent=\u0411\u0430\u0442\u044C\u043A\u0456\u0432\u0441\u044C\u043A\u0430 \u0441\u0442\u043E\u0440\u0456\u043D\u043A\u0430
+web.history.changes.document.title=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
 web.paging.firstPage=&laquo; \u041F\u0435\u0440\u0448\u0430
 web.paging.lastPage=\u041E\u0441\u0442\u0430\u043D\u043D\u044F &raquo;
 web.paging.nextPage=\u041D\u0430\u0441\u0442\u0443\u043F\u043D\u0430 &gt;
