--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_nl.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_nl.properties
@@ -491,7 +491,7 @@ core.delete.confirmWithInlinks=Naast het schrappen van een document is niet omke
 core.delete.orphansWarning=De volgende documenten hebben dit document omschreven als een ouder\: {0} Na het verwijderen van dit document, zullen ze wees.
 core.edit.wikiToolbar.titletext=Titel Tekst
 core.editors.content.titleField.label=Titel
-core.editors.fullscreen.editFullScreen=Maximaliseer\n
+core.editors.fullscreen.editFullScreen=Maximaliseer
 core.editors.fullscreen.editFullScreenTitle=Gemaximaliseerd
 core.editors.object.objectsForClass=Objecten van type {0}
 core.export.pdf.options.images=Plaatjes bijlagen
@@ -1282,6 +1282,8 @@ watchlist.table.allspaces=Alle ruimtes
 watchlist.table.document=Document naam
 watchlist.table.space=Ruimte
 watchlist.title=Volglijst voor {0}
+web.history.changes.document.defaultLocale=Standaard taal
+web.history.changes.document.hidden=Verborgen
 webcopyright=Auteursrechten
 webmenu=Paginaruimte Menu
 webpageviews=Space paginaweergaves
