[release] Updated translations.

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources_fr.properties
@@ -1063,12 +1063,12 @@ core.space.recyclebin.confirm=Tous les documents de l''espace {0} seront mis \u0
 core.space.recyclebin.done=L''espace {0} a \u00E9t\u00E9 plac\u00E9 dans la poubelle
 core.space.recyclebin.show=Consulter la liste des documents de cet espace qui sont actuellement \u00E0 la poubelle
 core.tagedit.title=Tags
-core.tags.add.cancel=annuler
+core.tags.add.cancel=Annuler
 core.tags.add.error.alreadySet=Ce tag a d\u00E9j\u00E0 \u00E9t\u00E9 ajout\u00E9
 core.tags.add.error.failed=Le tag "{0}" n''a pas pu \u00EAtre ajout\u00E9 suite \u00E0 une erreur interne du serveur
 core.tags.add.error.notAllowed=Vous n'avez pas les droits vous permettant d'ajouter un tag \u00E0 ce document
 core.tags.add.label=S\u00E9parez les tags par des virgules \:
-core.tags.add.submit=ajouter
+core.tags.add.submit=Ajouter
 core.tags.add.tooltip=Ajouter des tags
 core.tags.list.label=Tags\:
 core.tags.remove.error.failed=Le tag "{0}" n''a pas pu \u00EAtre supprim\u00E9 suite \u00E0 une erreur interne du serveur
